--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
 org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=512m -XX:-UseGCOverheadLimit -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
+JAVA_OPTS="-Xmx8192m -XX:-UseGCOverheadLimit -XX:MaxPermSize=64m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+
