--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=512m -XX:-UseGCOverheadLimit -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx8192m -XX:MaxMetaspaceSize=2048m -XX:-UseGCOverheadLimit -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 JAVA_OPTS="-Xmx8192m -XX:-UseGCOverheadLimit -XX:MaxPermSize=64m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
 
