Disabling daemon logs in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.daemon=true
+org.gradle.daemon=false
 org.gradle.jvmargs=-Xmx10240m -XX:MaxMetaspaceSize=2048m -XX:-UseGCOverheadLimit -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 JAVA_OPTS="-Xmx10240m -XX:-UseGCOverheadLimit -XX:MaxPermSize=64m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
